--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,7 +1,6 @@
 .carousel {
     z-index:1;
     width:100%;
-    /* margin-top:60px */
-    /* position: relative; */
-    /* margin-top:5% */
+    /* margin-top:60px ; */
+    margin-top:5% 
 }
