--- a/src/styles/submenu.css
+++ b/src/styles/submenu.css
@@ -14,7 +14,8 @@
     padding: 10px 0;
     /* margin-top:300%/ */
     position: absolute;
-    top:100%
+    top:100%;
+    /* text-decoration: ; */
 
 }
 .compostitionSubmenu{
